Changed package name

--- a/docs/example.ipynb
+++ b/docs/example.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Example usage\n",
     "\n",
-    "Here we will demonstrate how to use `pycounts` to count the words in a text file and plot the top 5 results."
+    "Here we will demonstrate how to use `pycounts_sandy` to count the words in a text file and plot the top 5 results."
    ]
   },
   {
@@ -22,8 +22,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pycounts.pycounts import count_words\n",
-    "from pycounts.plotting import plot_words"
+    "from pycounts_sandy.pycounts_sandy import count_words\n",
+    "from pycounts_sandy.plotting import plot_words"
    ]
   },
   {
